--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,8 @@
     "mocha": "^10.8.2"
   },
   "dependencies": {
-    "dotenv": "^16.4.5"
+    "bcrypt": "^5.1.1",
+    "dotenv": "^16.4.5",
+    "jsonwebtoken": "^9.0.2"
   }
 }
